# task_var

./: .gitattributes  .gitconfig1  Readme.md
Task/: AllConfigTask.cpp  AllConfigTask.h  AnEquilateralTriangle.cpp  AnEquilateralTriangle.h  CMakeLists.txt  CMakePresets.json  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  My_exception.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rhomb.cpp  Rhomb.h  RightAngledTriangle.cpp  RightAngledTriangle.h  Square.cpp  Task_1.cpp  Task_1.h  Task_2.cpp  Task_2.h  Task_3.cpp  Task_3.h  Task_CMake.cpp  Task_abstraktion.cpp  Task_class.cpp  Task_enum_struct.cpp  Task_exceptions.cpp  Task_makros.cpp  Task_many_files.cpp  Task_overload.cpp  Task_polimorf.cpp  Triangle.cpp  out1.txt
Task/Block_1/Task_1/: Task_1.cpp
Task/Course_Thread/: Course_progect_3.cpp  Course_progect_3.h
Task/Course_progect_2/Course_prg_2/: Course_prg_2.cpp
Task/Course_progect_2/Game_clases/: Config.cpp  Config.h  dll_1.cpp  dll_1.h  dll_2.cpp  dll_2.h  dll_3.cpp  dll_3.h
Task/Parsing_INI/: Config.cpp  Config.h  Cours_parsing_ini.cpp  Cours_parsing_ini.vcxproj  Read_file.cpp  Read_file.h  data_x.ini
Task/Task 1 (graf)/: AllConfigTask.cpp  Task 1 (graf).cpp  Task_1.cpp  Task_1.h  input.txt
Task/Task_1/: Task_1.cpp  Task_1.h  Task_1.sln  Task_1_3.cpp  Task_2.cpp  Task_2.h  dockerfile
Task/Task_1 (Decorator)/: Task_1 (Decorator).cpp  Task_1 (Decorator).sln
Task/Task_1 (command)/: Task_1 (command).cpp  Task_1 (command).sln
Task/Task_1_2/: Bin_task.cpp  CMakeLists.txt  Task_1.cpp  Task_1.h  Task_2.cpp  Task_2.h  Task_3.h  dockerfile
Task/Task_1_2 (fibonachi)/: Task_1.cpp  Task_1.h  Task_1_2 (fibonachi).cpp  Task_2.cpp  Task_2.h
Task/Task_1_2(RAII)/: Task_1.cpp  Task_1.h  Task_1_2(RAII).cpp  Task_1_2(RAII).vcxproj  Task_2.cpp  Task_2.h
Task/Task_1_2(STL1)/: AllConfigTask.h  Task_1.cpp  Task_1.h  Task_1_2(STL1).cpp  Task_1_2(STL1).vcxproj  Task_2.cpp  Task_2.h  Task_3.cpp  Task_3.h
Task/Task_1_2(bin_tree)/: Task_1.cpp  Task_1.h  Task_1_2(bin_tree).cpp  Task_2.cpp  Task_2.h
Task/Task_1_2_(STL2)/: AllConfigTask.cpp  AllConfigTask.h  Task_1.cpp  Task_1.h  Task_1_2_(STL2).cpp  Task_1_2_(STL2).vcxproj  Task_2.cpp  Task_2.h  Task_3.cpp  Task_3.h
Task/Task_1_3(hash)/: Task_1.cpp  Task_1.h  Task_1_3(hash).cpp  Task_2.cpp  Task_2.h  Task_3.cpp  Task_3.h
Task/Task_1_3(templyte)/: Task_1.cpp  Task_1.h  Task_1_3(templyte).cpp  Task_1_3(templyte).vcxproj  Task_2.cpp  Task_2.h  Task_3.cpp  Task_3.h
Task/Task_1_3_(arr_din_logic)/: Task_1.cpp  Task_1.h  Task_1_3_(arr_din_logic).cpp  Task_2.cpp  Task_2.h
Task/Task_2/: Task_2.cpp  Task_2.sln  Task_4_array.cpp  dockerfile
Task/Task_2 (Observer)/: Task_2 (Observer).cpp  Task_2 (Observer).sln
Task/Task_2 (proxy)/: Task_2 (proxy).cpp  Task_2 (proxy).sln
Task/Task_3/: Task_3.cpp  Task_3.sln
Task/Task_3 (Chain)/: Task_3 (Chain).cpp  Task_3 (Chain).sln
Task/Task_4/: CMakeLists.txt  Script-1.sql  Task_4.cpp  Task_4.h
Task/Task_5/: Task_5.cpp  Task_5.h  Task_5.sln
Task/Task_CMake_dll/: CMakeLists.txt  CMakePresets.json  Task_1.cpp  Task_1.h  Task_2.cpp  Task_2.h  Task_3.h  Task_CMake_dll.cpp  Task_dll.cpp  Task_dll.h  Task_static.cpp  Task_static.h
Task/Task_Catch2/: CMakeLists.txt  Task_Catch2.cpp  Task_Catch2.h  my_list.h
Task/Task_dll/Dll_1/: Task_dll.cpp
Task/Task_dll/StaticLib_1/: Task_static.cpp
Task/Task_dll/Task_lib_1/: AllConfigTask.h  Task_3.cpp  Task_lib_1.cpp
Task/Task_move/: AllConfigTask.cpp  AllConfigTask.h  Task_1.cpp  Task_1.h  Task_2.cpp  Task_2.h  Task_move.cpp  Task_move.vcxproj
Task/Task_unique/: AllConfigTask.h  Task_1.cpp  Task_1.h  Task_2.cpp  Task_2.h  Task_unique.cpp  Task_unique.vcxproj
Task/task_file/: AllConfigTask.cpp  AllConfigTask.h  AnEquilateralTriangle.cpp  AnEquilateralTriangle.h  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  My_exception.cpp  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhomb.cpp  Rhomb.h  RightAngledTriangle.cpp  RightAngledTriangle.h  Square.cpp  Square.h  Task_1.cpp  Task_1.h  Task_2.cpp  Task_2.h  Task_3.h  Triangle.cpp  Triangle.h
